# python_development_good_practices

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notes/: App_more_pythonic.md  automation.md  formatting_with_black.md  linting_formatting.md  linting_with_flake8.md  readability.md  semantic_versioning_in_toml.md  some_uv_tips.md  testing.md  v1_wow_what_a_fantastic_app.md  virtual_environments.md  what's_new_in_v2.md  whats_new_in_v3.md  whats_new_in_v4.md  whats_new_in_v5.md  whats_new_in_v6.md  why_a_README.md  workflow_pip_venv.md  workflow_with_poetry.md  workflow_with_uv.md
pythonic_code/: documentation.md  mypy_example.py  pythonic_examples.py  writing_pythonic_code.md
sign_printer/: sign_printer.py  utils.py
tests/: test_utils.py
