[project]
name = "python-development-good-practices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyfiglet>=1.0.4",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "flake8>=7.3.0",
    "pre-commit>=4.6.0",
]
test = [
    "pytest>=9.1.1",
]
